# uzor

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  bash.exe.stackdump
uzor-agent-api/: Cargo.toml  README.md
uzor-agent-api/src/: command.rs  control.rs  lib.rs  model.rs  server.rs
uzor-animation/: Cargo.toml  README.md
uzor-animation/examples/: button_recipes.rs
uzor-animation/research/: easing-functions.md  missing-engine-primitives.md  rust-implementation-notes.md  spring-physics.md  stagger-patterns.md  timeline-architecture.md
uzor-animation/src/: blend.rs  color.rs  decay.rs  easing.rs  layers.rs  lib.rs  path.rs  scroll.rs  spring.rs  stagger.rs  stroke.rs  timeline.rs
uzor-animation/src/recipes/buttons/: builders.rs  defaults.rs  presets.rs  types.rs
uzor-animation/src/recipes/charts/: EXAMPLES.md  builders.rs  defaults.rs  mod.rs  presets.rs  types.rs
uzor-animation/src/recipes/lists/: builders.rs  defaults.rs  mod.rs  presets.rs  types.rs
uzor-animation/tests/: loading_recipes_integration.rs  scroll_recipes.rs  transitions_integration.rs
uzor-autodetect/: Cargo.toml
uzor-autodetect/src/: lib.rs
uzor-backend-canvas2d/: Cargo.toml
uzor-backend-canvas2d/src/: context.rs  lib.rs
uzor-backend-tiny-skia/: Cargo.toml
uzor-backend-tiny-skia/src/: context.rs  lib.rs
uzor-backend-vello-common/: Cargo.toml
uzor-backend-vello-common/src/: color.rs  font.rs  lib.rs  path.rs  state.rs
uzor-backend-vello-cpu/: Cargo.toml
uzor-backend-vello-cpu/src/: context.rs  lib.rs
uzor-backend-vello-gpu/: Cargo.toml
uzor-backend-vello-gpu/src/: context.rs  text.rs
uzor-backend-vello-hybrid/: Cargo.toml
uzor-backend-vello-hybrid/src/: context.rs  lib.rs
uzor-backend-wgpu-instanced/: Cargo.toml
uzor-backend-wgpu-instanced/src/: context.rs  glyph_instance.rs  instances.rs  lib.rs  renderer.rs  shaders.rs  text.rs  text_atlas.rs
uzor-core/: Cargo.toml
uzor-core/src/: lib.rs
uzor-core/src/animation/: coordinator.rs  decay.rs  layers.rs  mod.rs  path.rs  scroll.rs  spring.rs  stagger.rs  stroke.rs  timeline.rs  types.rs
uzor-core/src/containers/: flex.rs  scroll.rs  stack.rs
uzor-core/src/cursor/: glare_hover.rs  mod.rs
uzor-core/src/input/: animation.rs  coordinator.rs  event_processor.rs  events.rs  handlers.rs  mod.rs  sense.rs  state.rs  tooltip.rs  widget_state.rs
uzor-core/src/interactive/: animated_list.rs  elastic_slider.rs  mod.rs
uzor-core/src/layout/: mod.rs  types.rs
uzor-core/src/layout_helpers/: mod.rs
uzor-core/src/numbers/: mod.rs
uzor-core/src/panel_api/: mod.rs
uzor-core/src/panels/: drag.rs  drop_zone.rs  floating.rs  mod.rs  presets.rs  snap_back.rs  tabs.rs
uzor-core/src/platform/: backends.rs  types.rs
uzor-core/src/scroll_fx/: mod.rs  scroll_reveal.rs
uzor-core/src/state/: mod.rs  registry.rs
uzor-core/src/text_fx/: decrypt.rs
uzor-core/src/types/: icon.rs  mod.rs  rect.rs  state.rs
uzor-core/src/widgets/: checkbox.rs  context_menu.rs  input.rs  mod.rs  scrollable.rs  scrollbar.rs  slider_system.rs
uzor-core/tests/: integration_tests.rs  render_input_cycle_tests.rs
uzor-cursor/: Cargo.toml
uzor-cursor/src/: blob_cursor.rs  click_spark.rs  lib.rs
uzor-desktop/: Cargo.toml
uzor-desktop/src/: agent.rs  application.rs  builder_run.rs  chrome.rs  event_mapper.rs  lib.rs  manager.rs  tray.rs
uzor-desktop/src/factory/: button.rs  container.rs  dropdown.rs  mod.rs  overlay.rs  panel.rs  popup.rs  slider.rs  text_input.rs  toast.rs
uzor-desktop/src/platform/: win32.rs
uzor-desktop/src/utils/: mod.rs  resource.rs  screenshot.rs  single_instance.rs
uzor-desktop/src/window/: config.rs  creation.rs  manager.rs  mod.rs  state.rs
uzor-examples/: Cargo.toml
uzor-examples/src/l1/: coord.rs
uzor-examples/src/l2/: launcher.rs
uzor-examples/src/l3/: dashboard.rs
uzor-examples/src/l4/: dashboard.rs  hello.rs  tree_debug.rs
uzor-examples/src/urx/: smoke_instanced.rs
uzor-facade/: Cargo.toml
uzor-facade/src/: lib.rs
uzor-fonts/: Cargo.toml  build.rs
uzor-fonts/src/: lib.rs
uzor-framework/: Cargo.toml  REQUIREMENTS.md  build.rs  tokens.toml
uzor-framework-macros/: Cargo.toml
uzor-framework-macros/src/: lib.rs  lower.rs  parse.rs
uzor-framework/examples/: hello.rs  level1_minimal.rs  level2_launcher.rs  level3_dashboard.rs  level4_dashboard.rs  level4_design_bureau.rs  level4_kkt_tray.rs  level4_launcher.rs  level4_yoga_tg.rs
uzor-framework/src/: app.rs  builder.rs  chrome.rs  layout.rs  lib.rs  multi_window.rs  runtime.rs  screenshot.rs  tray.rs  window_manager.rs
uzor-framework/src/platform/: mod.rs  win32.rs
uzor-framework/src/utils/: mod.rs  resource.rs  single_instance.rs
uzor-framework/src/widgets/: coord.rs  ctx.rs  lm.rs  mod.rs
uzor-framework/src/window/: config.rs  creation.rs  manager.rs  mod.rs  state.rs
uzor-icon/: Cargo.toml
uzor-icon/src/: lib.rs
uzor-interactive/: Cargo.toml
uzor-interactive/src/: elastic_slider.rs  electric_border.rs  lib.rs
uzor-layout/: Cargo.toml  README.md
uzor-layout/src/: lib.rs
uzor-layout/src/helpers/: alignment.rs  layout.rs  sizing.rs
uzor-mobile/: Cargo.toml  IMPLEMENTATION_SUMMARY.md
uzor-mobile/src/: android.rs  common.rs  ios.rs  lib.rs
uzor-numbers/: Cargo.toml
uzor-numbers/src/: count_up.rs  counter.rs  lib.rs
uzor-panels/: Cargo.toml
uzor-panels/src/: drag.rs  drop_zone.rs  floating.rs  grid.rs  hit_test.rs  id.rs  layout.rs  lib.rs  manager.rs  presets.rs  separator.rs  serialize.rs  snap_back.rs  tabs.rs  tree.rs
uzor-render-hub/: Cargo.toml
uzor-render-hub/src/: backend.rs  compose.rs  detect.rs  factories.rs  factory.rs  hub.rs  lib.rs  metrics.rs  runtime.rs  submit.rs  submit_urx.rs  surface.rs  urx_engine_handle.rs
uzor-render-tiny-skia/: Cargo.toml
uzor-render-tiny-skia/src/: context.rs  lib.rs
uzor-render-urx/: Cargo.toml
uzor-render-urx/src/: context.rs  lib.rs
uzor-render-vello-gpu/: Cargo.toml
uzor-render-vello-gpu/src/: context.rs  lib.rs
uzor-render-vello-hybrid/: Cargo.toml
uzor-render-vello-hybrid/src/: context.rs  lib.rs
(+1011 files in other folders)
