[workspace]
members = [
    # Font assets (published separately — large binary, rarely changes)
    "uzor-fonts",
    # Core library (contains render, animation, panels, panel_api, macos, layout, interactive, text_fx, cursor, numbers, scroll_fx)
    "uzor",
    # Platform
    "uzor-window-desktop",
    "uzor-desktop",
    "uzor-framework-macros",
    "uzor-window-web",
    "uzor-window-mobile",
    "uzor-tui",
    # Backends
    "uzor-render-vello-gpu",
    "uzor-render-vello-cpu",
    "uzor-render-vello-hybrid",
    "uzor-render-tiny-skia",
    "uzor-render-canvas2d",
    "uzor-render-wgpu-instanced",
    # Utils
    "uzor-render-hub",
    # Icon utilities
    "uzor-icon",
    # Agent control plane (local HTTP API)
    "uzor-agent-api",
    # Layered demos
    "uzor-examples",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zeng3ld/uzor"
homepage = "https://github.com/zeng3ld/uzor"
keywords = ["ui", "rendering", "framework", "headless", "gpu"]
categories = ["gui", "rendering", "graphics"]

[workspace.dependencies]
uzor = { version = "1.2.0", path = "./uzor" }
uzor-fonts = { version = "1.2.0", path = "./uzor-fonts" }
uzor-render-hub = { version = "1.2.0", path = "./uzor-render-hub" }
uzor-render-vello-gpu = { version = "1.2.0", path = "./uzor-render-vello-gpu" }
uzor-render-vello-hybrid = { version = "1.2.0", path = "./uzor-render-vello-hybrid" }
uzor-render-vello-cpu = { version = "1.2.0", path = "./uzor-render-vello-cpu" }
uzor-render-tiny-skia = { version = "1.2.0", path = "./uzor-render-tiny-skia" }
uzor-render-wgpu-instanced = { version = "1.2.0", path = "./uzor-render-wgpu-instanced" }
uzor-render-canvas2d = { version = "1.2.0", path = "./uzor-render-canvas2d" }
uzor-window-desktop = { version = "1.2.0", path = "./uzor-window-desktop" }
uzor-icon = { version = "1.2.0", path = "./uzor-icon" }
uzor-window-web = { version = "1.2.0", path = "./uzor-window-web" }
uzor-window-mobile = { version = "1.2.0", path = "./uzor-window-mobile" }
uzor-framework-macros = { version = "1.2.0", path = "./uzor-framework-macros" }
uzor-desktop = { version = "1.2.0", path = "./uzor-desktop" }
uzor-agent-api = { version = "1.2.0", path = "./uzor-agent-api" }
serde = { version = "1.0", features = ["derive"] }

