[workspace]
members = [
    # Font assets (published separately — large binary, rarely changes)
    "uzor-fonts",
    # Core library (contains render, animation, panels, panel_api, macos, layout, interactive, text_fx, cursor, numbers, scroll_fx)
    "uzor",
    # Platform
    "uzor-window-desktop",
    "uzor-desktop",
    "uzor-framework-macros",
    "uzor-window-web",
    "uzor-window-mobile",
    "uzor-tui",
    # Backends
    "uzor-render-vello-gpu",
    "uzor-render-vello-cpu",
    "uzor-render-vello-hybrid",
    "uzor-render-tiny-skia",
    "uzor-render-canvas2d",
    "uzor-render-wgpu-instanced",
    # URX render family (Phase 1+ — shared core, then siblings: wgpu/cpu/hybrid)
    "uzor-urx-core",
    "uzor-urx-cpu",
    "uzor-urx-wgpu",
    "uzor-urx-engine",
    "uzor-urx-hybrid",
    "uzor-urx-glyph",
    # URX full-GPU compute pipeline backend (v1.6 scaffold)
    "uzor-urx-wgpu-full",
    # URX 3D backend (native XYZ, perspective camera, depth pipeline — Wave 1+)
    "uzor-urx-3d",
    # URX 3D physics (Wave 15+16 — AABB/sphere colliders + dynamics)
    "uzor-urx-physics",
    # URX region mixer (Wave 9b — default MixDispatcher for engine)
    "uzor-urx-region-mixer",
    # Utils
    "uzor-render-hub",
    # Icon utilities
    "uzor-icon",
    # Agent control plane (local HTTP API)
    "uzor-agent-api",
    # Layered demos
    "uzor-examples",
]
resolver = "2"

[workspace.package]
version = "1.4.5"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zeng3ld/uzor"
homepage = "https://github.com/zeng3ld/uzor"
keywords = ["ui", "rendering", "framework", "headless", "gpu"]
categories = ["gui", "rendering", "graphics"]

[workspace.dependencies]
uzor = { version = "1.4.5", path = "./uzor" }
uzor-fonts = { version = "1.4.5", path = "./uzor-fonts" }
uzor-render-hub = { version = "1.4.5", path = "./uzor-render-hub" }
uzor-render-vello-gpu = { version = "1.4.5", path = "./uzor-render-vello-gpu" }
uzor-render-vello-hybrid = { version = "1.4.5", path = "./uzor-render-vello-hybrid" }
uzor-render-vello-cpu = { version = "1.4.5", path = "./uzor-render-vello-cpu" }
uzor-render-tiny-skia = { version = "1.4.5", path = "./uzor-render-tiny-skia" }
uzor-render-wgpu-instanced = { version = "1.4.5", path = "./uzor-render-wgpu-instanced" }
uzor-render-canvas2d = { version = "1.4.5", path = "./uzor-render-canvas2d" }
uzor-window-desktop = { version = "1.4.5", path = "./uzor-window-desktop" }
uzor-icon = { version = "1.4.5", path = "./uzor-icon" }
uzor-window-web = { version = "1.4.5", path = "./uzor-window-web" }
uzor-window-mobile = { version = "1.4.5", path = "./uzor-window-mobile" }
uzor-framework-macros = { version = "1.4.5", path = "./uzor-framework-macros" }
uzor-desktop = { version = "1.4.5", path = "./uzor-desktop" }
uzor-agent-api = { version = "1.4.5", path = "./uzor-agent-api" }
uzor-urx-core = { version = "1.4.5", path = "./uzor-urx-core" }
uzor-urx-cpu  = { version = "1.4.5", path = "./uzor-urx-cpu" }
uzor-urx-wgpu = { version = "1.4.5", path = "./uzor-urx-wgpu" }
uzor-urx-engine = { version = "1.4.5", path = "./uzor-urx-engine" }
uzor-urx-hybrid = { version = "1.4.5", path = "./uzor-urx-hybrid" }
uzor-urx-glyph = { version = "1.4.5", path = "./uzor-urx-glyph" }
uzor-urx-wgpu-full = { version = "1.4.5", path = "./uzor-urx-wgpu-full" }
uzor-urx-3d = { version = "1.4.5", path = "./uzor-urx-3d" }
serde = { version = "1.0", features = ["derive"] }

