[package]
name = "uzor-backend-canvas2d"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Web Canvas2D rendering backend for WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uzor = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "TextMetrics",
    "Path2d",
    "DomMatrix",
]
