[package]
name = "uzor-backend-vello-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared utilities for vello-based backends"

[dependencies]
uzor-core = { workspace = true }
vello = "0.7"
skrifa = "0.40"
