[package]
name = "uzor-backend-vello-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GPU rendering backend using vello + wgpu"
readme = "../README.md"

[dependencies]
uzor = { workspace = true }
vello = "0.7"
skrifa = "0.40"
