[package]
name = "uzor-backend-wgpu-instanced"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance instanced wgpu rendering backend"

[dependencies]
uzor-render = { workspace = true }
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.12"
skrifa = "0.40"
etagere = "0.2"
