[package]
name = "uzor-backend-wgpu-instanced"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "High-performance instanced wgpu rendering backend"
readme = "../README.md"

[dependencies]
uzor = { workspace = true }
wgpu = "27"
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.12"
skrifa = "0.40"
etagere = "0.2"
lyon_tessellation = "1.0"
lyon_path = "1.0"
