[package]
name = "uzor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core UI engine — geometry, interaction, input state"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
log = "0.4"
smallvec = { version = "1.10", features = ["serde"] }
bitflags = "2.0"
num-traits = "0.2"
thiserror = "1.0"
parking_lot = "0.12"
ahash = "0.8"
slotmap = "1.0"
rand = "0.8"

[features]
serde = []

[dev-dependencies]
env_logger = "0.10"
