[package]
name = "uzor-cursor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cursor management for uzor"

[dependencies]
uzor-animation = { workspace = true, optional = true }

[features]
default = ["animation"]
animation = ["uzor-animation"]
