[package]
name = "uzor-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Desktop backend for uzor (winit integration)"

[dependencies]
uzor-core = { workspace = true, features = ["serde"] }

# Windowing and events
winit = "0.30"

# Platform integration
arboard = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dark-light = "1.0"

[dev-dependencies]
env_logger = "0.11"
