[package]
name = "uzor-examples"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Layered demos for uzor — L1 (raw input coordinator), L2 (context manager + widgets), L3 (layout manager + composites), L4 (App + WindowManager builder)."

[dependencies]
uzor                  = { workspace = true }
uzor-desktop          = { workspace = true }
uzor-framework-macros = { workspace = true }
uzor-render-hub       = { workspace = true }
uzor-render-vello-gpu = { workspace = true }
uzor-window-desktop   = { workspace = true }
vello                 = "0.8"
pollster              = "0.4"
winit                 = "0.30"
arboard               = "3"
serde_json            = "1"

[[bin]]
name = "l1-coord"
path = "src/l1/coord.rs"

[[bin]]
name = "l2-launcher"
path = "src/l2/launcher.rs"

[[bin]]
name = "l3-dashboard"
path = "src/l3/dashboard.rs"

[[bin]]
name = "l4-dashboard"
path = "src/l4/dashboard.rs"
