[package]
name = "uzor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Facade crate — re-exports uzor-render, uzor-core, and feature-gated backends"

[features]
default = ["vello-gpu"]

# Individual backend features
vello-gpu    = ["dep:uzor-backend-vello-gpu"]
vello-cpu    = ["dep:uzor-backend-vello-cpu"]
vello-hybrid = ["dep:uzor-backend-vello-hybrid"]
tiny-skia    = ["dep:uzor-backend-tiny-skia"]
canvas2d     = ["dep:uzor-backend-canvas2d"]
# Convenience groups
all-cpu  = ["vello-cpu", "tiny-skia"]
all-gpu  = ["vello-gpu", "vello-hybrid"]
all-wasm = ["canvas2d"]

[dependencies]
# Always available — core traits and render abstractions
uzor-render = { workspace = true }
uzor-core   = { workspace = true }

# Optional backends — each pulled in only when its feature is enabled
uzor-backend-vello-gpu    = { version = "1.0.1", path = "../uzor-backend-vello-gpu",    optional = true }
uzor-backend-vello-cpu    = { version = "1.0.1", path = "../uzor-backend-vello-cpu",    optional = true }
uzor-backend-vello-hybrid = { version = "1.0.1", path = "../uzor-backend-vello-hybrid", optional = true }
uzor-backend-tiny-skia    = { version = "1.0.1", path = "../uzor-backend-tiny-skia",    optional = true }
uzor-backend-canvas2d     = { version = "1.0.1", path = "../uzor-backend-canvas2d",     optional = true }
