[package]
name = "uzor-fonts"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bundled font assets for uzor (Roboto, JetBrainsMono, NotoEmoji, NotoColorEmoji, etc.)"
repository.workspace = true
homepage.workspace = true
keywords = ["fonts", "ui", "rendering", "embedded", "assets"]
categories = ["embedded", "rendering"]
links = "uzor_fonts_assets"
exclude = ["fonts/NotoColorEmoji.ttf"]

[build-dependencies]
