[package]
name = "uzor-framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "uzor-framework: thin re-export shim — L4 App API from uzor + desktop runtime from uzor-desktop."

[dependencies]
uzor = { workspace = true }
uzor-desktop = { workspace = true }
uzor-render-hub = { workspace = true }
uzor-window-hub = { workspace = true }
uzor-framework-macros = { workspace = true }

[build-dependencies]
toml = "0.8"

[dev-dependencies]
uzor-window-hub = { workspace = true }
uzor-render-vello-gpu = { workspace = true }
uzor-window-desktop = { workspace = true }
arboard = "3"

[[example]]
name = "hello"
path = "examples/hello.rs"

# ── Level 1: bare InputCoordinator ────────────────────────────────────────────
[[example]]
name = "level1_minimal"
path = "examples/level1_minimal.rs"

# ── Level 2: ContextManager + LayoutManager + widgets (user owns winit+vello) ─
[[example]]
name = "level2_launcher"
path = "examples/level2_launcher.rs"

# ── Level 4: uzor-framework (App trait) ───────────────────────────────────────
[[example]]
name = "level4_dashboard"
path = "examples/level4_dashboard.rs"

# ── Level 3: LayoutManager + composite widgets + WinitInputBridge ────────────
[[example]]
name = "level3_dashboard"
path = "examples/level3_dashboard.rs"
