[package]
name = "uzor-icon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["uzor", "icon", "svg", "png", "build"]
categories = ["graphics", "development-tools::build-utils"]
description = "Build-time helpers to convert SVG -> PNG / .ico for app icons (uzor framework utility)."

[dependencies]
resvg = "0.45"
tiny-skia = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "ico"] }
