[package]
name = "uzor-interactive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Interactive widget utilities for uzor"

[dependencies]
uzor-core = { workspace = true }

[features]
default = ["animation"]
animation = []
