[package]
name = "uzor-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Layout calculation helpers — alignment, stacking, grid"

[dependencies]
uzor-core = { workspace = true }

[dev-dependencies]
# Add test dependencies if needed
