[package]
name = "uzor-numbers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Number formatting and display for uzor"

[dependencies]
uzor-core = { workspace = true }

[features]
default = ["animation"]
animation = []
