[package]
name = "uzor-panels"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Panel system for uzor UI framework"

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
uzor-core = { workspace = true }

[features]
default = ["animation"]
animation = []
