[package]
name = "uzor-render-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "uzor-render-hub: unified rendering backend hub — auto-detects GPU, instantiates the right backend (vello-gpu / vello-hybrid / wgpu-instanced / vello-cpu / tiny-skia), submits frames, collects metrics."

[dependencies]
uzor = { workspace = true }
uzor-backend-vello-gpu = { workspace = true }
uzor-backend-vello-hybrid = { workspace = true }
uzor-backend-wgpu-instanced = { workspace = true }
uzor-backend-vello-cpu = { workspace = true }
uzor-backend-tiny-skia = { workspace = true }
vello = "0.8"
vello_hybrid = { version = "0.0.7", features = ["wgpu"] }
wgpu = "28"
serde = { version = "1", features = ["derive"] }
