[package]
name = "uzor-render-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "uzor-render-hub: unified rendering backend hub — auto-detects GPU, instantiates the right backend (vello-gpu / vello-hybrid / wgpu-instanced / vello-cpu / tiny-skia), submits frames, collects metrics."

[dependencies]
uzor = { workspace = true }
uzor-urx-core = { workspace = true }
metrics = "0.24"
uzor-render-vello-gpu = { workspace = true }
uzor-render-vello-hybrid = { workspace = true }
uzor-render-wgpu-instanced = { workspace = true }
uzor-render-vello-cpu = { workspace = true }
uzor-render-tiny-skia = { workspace = true }
uzor-render-urx = { workspace = true }
uzor-urx-cpu = { workspace = true }
uzor-urx-wgpu = { workspace = true }
uzor-urx-hybrid = { workspace = true }
# urx-wgpu-full has a different consumer API (encode → upload → dispatch +
# blit) than the (Scene → render → bytes) shape of the other three. It will
# be wired separately once the convenience wrapper lands. For now the
# `UrxWgpuFull` enum variant exists but renders nothing (logged as TODO).
uzor-urx-wgpu-full = { workspace = true }
uzor-urx-engine = { workspace = true, features = ["wgpu-backend", "hybrid-backend", "full-gpu-backend"] }
uzor-urx-3d = { workspace = true }
uzor-urx-physics = { workspace = true }
vello = "0.9"
vello_hybrid = { version = "0.0.9", features = ["wgpu"] }
wgpu = "29"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
pollster = "0.4"
winit = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uzor-window-desktop = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uzor-render-canvas2d = { workspace = true }
uzor-window-web = { workspace = true }
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
