[package]
name = "uzor-render-tiny-skia"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CPU rendering backend using tiny-skia"
readme = "../README.md"

[dependencies]
uzor = { workspace = true }
tiny-skia = "0.11"
fontdue = "0.9"
