[package]
name = "uzor-render-vello-gpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "GPU rendering backend using vello + wgpu"
readme = "../README.md"

[dependencies]
uzor = { workspace = true }
vello = "0.8"
skrifa = "0.40"
