[package]
name = "uzor-render-vello-hybrid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Hybrid CPU/GPU rendering backend using vello_hybrid"
readme = "../README.md"

[dependencies]
uzor = { workspace = true, features = ["shaper"] }
# vello_hybrid 0.0.7: CPU strip encoding + GPU fine rasterization.
# Uses wgpu 28 — now unified with vello 0.8 stack, no version conflict.
vello_hybrid = { version = "0.0.9", features = ["wgpu", "text"] }
# vello_common is the shared foundation (re-exported by vello_hybrid but not
# publicly accessible via vello_hybrid's namespace for kurbo/peniko/glyph types).
vello_common = { version = "0.0.9", features = ["std"] }
# glifo provides the Glyph type that vello_common 0.0.9 removed.
glifo = "0.1"
# wgpu 28.x required by vello_hybrid 0.0.7 (unified with vello 0.8 stack).
wgpu = { version = "29", default-features = false }
skrifa = "0.42"
